# CarSpeedBoy

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
config/: config.json
docs/: AGL_AppStore_and_Flutter.md  AGL_Protocol_Configuration.md  AGL_vs_Implementation.md  DEVELOPMENT_LOG.md  DataAcquisitionLayer_Detail.md  TODO.md  architecture.puml
include/: application_controller.h
include/business_logic/: alert_manager.h  data_logger.h  expression_state_machine.h  speed_monitor.h
include/data_acquisition/: configuration_manager.h  vehicle_data_manager.h
include/presentation/: character_animation_engine.h
meta-carspeedboy/: README.md
meta-carspeedboy/conf/: layer.conf
meta-carspeedboy/recipes-carspeedboy/carspeedboy/: carspeedboy_git.bb
qml/: CharacterView.qml  SettingsDialog.qml  SpeedDisplay.qml  main.qml
resources/: resources.qrc
src/: application_controller.cpp  main.cpp
src/business_logic/: alert_manager.cpp  data_logger.cpp  expression_state_machine.cpp  speed_monitor.cpp
src/data_acquisition/: configuration_manager.cpp  vehicle_data_manager.cpp
src/presentation/: character_animation_engine.cpp
tests/: CMakeLists.txt  test_configuration_manager.cpp  test_expression_state_machine.cpp  test_vehicle_data_manager.cpp
